--- a/Hyva_Theme/templates/elements/slider.phtml
+++ b/Hyva_Theme/templates/elements/slider.phtml
@@ -23,7 +23,7 @@ $lucideIcons = $viewModels->require(LucideIcons::class);
 $sliderName = $block->getSliderName() ?: str_replace(['.', '/', '\\'], '_', $block->getNameInLayout());
 $title = $block->getTitle() ?: '';
 $headingTag = $block->getHeadingTag() ?: 'h3';
-$cssClasses = $block->getCssClasses() ?: 'my-8';
+$cssClasses = $block->getCssClasses() ?: 'snap-slider my-8';
 $headingCssClasses = $block->getHeadingCssClasses() ?: 'text-2xl font-medium';
 $columnCount = $block->getColumnCount() ?? 1;
 $sliderClasses = implode(' ', array_filter([
