--- a/web/tailwind/components/button.css
+++ b/web/tailwind/components/button.css
@@ -9,10 +9,10 @@
 
 @utility btn {
     --btn-stroke: #0000;
-    --btn-bg: var(--color-slate-200);
-    --btn-hover-bg: var(--color-slate-300);
-    --btn-active-bg: var(--color-slate-300);
-    --btn-color: var(--color-slate-900);
+    --btn-bg: color-mix(in oklch, var(--color-primary), #0000 94%);
+    --btn-hover-bg: color-mix(in oklch, var(--color-primary), #0000 86%);
+    --btn-active-bg: color-mix(in oklch, var(--color-primary), #0000 86%);
+    --btn-color: var(--color-text);
     display: flex;
     justify-content: center;
     align-items: center;
