--- a/Magento_Theme/templates/html/header/menu/mobile.phtml
+++ b/Magento_Theme/templates/html/header/menu/mobile.phtml
@@ -51,12 +51,12 @@ $itemClasses = (string) $block->getItemClasses() ?: "flex items-center gap-2 py-
         x-transition:leave-end="-translate-x-full"
     >
         <div class="border-b border-slate-200">
-            <div class="flex items-center gap-2 py-4 px-6">
+            <div class="flex justify-between items-center gap-2 py-4 px-6">
                 <div><?= $block->getChildHtml('logo') ?></div>
                 <button
                     type="button"
                     @click="close"
-                    class="btn bg-transparent border-transparent p-1 ms-auto"
+                    class="btn bg-transparent border-transparent p-1"
                     aria-label="<?= $escaper->escapeHtmlAttr(__('Close menu')) ?>"
                 >
                     <?= $lucideIcons->xHtml('', 24, 24, ["aria-hidden" => "true"]) ?>
