--- a/Magento_Theme/templates/html/header/menu/desktop.phtml
+++ b/Magento_Theme/templates/html/header/menu/desktop.phtml
@@ -73,7 +73,7 @@ $block->setData('cache_tags', $viewModelNavigation->getIdentities());
                         </span>
                         <?php if (!empty($menuItem['childData'])): ?>
                             <ul
-                                class="absolute top-full z-10 hidden px-6 py-4 mt-0.5 -ml-6 shadow-lg bg-container-lighter/95"
+                                class="absolute top-full z-10 hidden px-6 py-4 mt-0.5 -ml-6 shadow-lg bg-white/95"
                                 :class="{
                                     'hidden' : hoverPanelActiveId !== '<?= /* @noEscape */ (string) $index ?>',
                                     'block' : hoverPanelActiveId === '<?= /* @noEscape */ (string) $index ?>'
