--- a/Magento_Theme/templates/html/header/menu/mobile.phtml
+++ b/Magento_Theme/templates/html/header/menu/mobile.phtml
@@ -97,7 +97,7 @@ $itemClasses = (string) $block->getItemClasses() ?: "flex items-center gap-2 py-
                                     <li data-level="1">
                                         <button
                                             type="button"
-                                            class="w-full bg-slate-50 font-bold <?= $escaper->escapeHtmlAttr($itemClasses) ?>"
+                                            class="w-full bg-surface font-bold <?= $escaper->escapeHtmlAttr($itemClasses) ?>"
                                             @click="close"
                                             x-ref="closeSubMenuBtn"
                                         >
