--- a/Magento_Customer/templates/header/customer-menu.phtml
+++ b/Magento_Customer/templates/header/customer-menu.phtml
@@ -39,13 +39,11 @@ $lucideIcons = $viewModels->require(LucideIcons::class);
         <?= $lucideIcons->userHtml('', 24, 24, ['aria-hidden' => 'true']); ?>
     </button>
     <nav
-        class="
-            absolute right-0 z-20 w-40 py-2 mt-2 -mr-4 px-1 overflow-auto origin-top-right rounded-sm
-            shadow-lg sm:w-48 lg:mt-3 bg-white
-        "
-        x-cloak
-        x-show="open"
+        class="z-10 absolute right-0 w-40 sm:w-48 mt-2 lg:mt-3 -me-4 py-2 px-1 rounded-md shadow-lg bg-white overflow-auto"
         aria-labelledby="customer-menu"
+        x-show="open"
+        x-transition
+        x-cloak
     >
         <?php if ($block->customerLoggedIn()): ?>
             <?= $block->getChildHtml('header.customer.logged.in.links') ?>
