--- a/Magento_Catalog/templates/page/js/view-transition-between-gallery.phtml
+++ b/Magento_Catalog/templates/page/js/view-transition-between-gallery.phtml
@@ -29,6 +29,7 @@ use Magento\Framework\View\Element\Template;
 
         if (targetElement) {
             targetElement.style.viewTransitionName = 'view-transition-to-gallery';
+
             await promise;
             targetElement.style.viewTransitionName = '';
         }
@@ -36,15 +37,14 @@ use Magento\Framework\View\Element\Template;
 
     window.addEventListener('pageswap', async (e) => {
         if (!e.viewTransition) return;
-        const targetUrl = new URL(e.activation.entry.url);
-        setTransitionNameBetweenGallery(targetUrl.href, e.viewTransition.finished);
+        const target = new URL(e.activation.entry.url);
+        setTransitionNameBetweenGallery(target.href, e.viewTransition.finished);
     });
 
     window.addEventListener('pagereveal', async (e) => {
         if (!e.viewTransition || (window.navigation && !window.navigation.activation.from)) return;
-        const fromUrl = new URL(window.navigation.activation.from.url);
-        // const entryURL = new URL(navigation.activation.entry.url);
-        setTransitionNameBetweenGallery(fromUrl.href, e.viewTransition.ready);
+        const target = new URL(window.navigation.activation.from.url);
+        setTransitionNameBetweenGallery(target.href, e.viewTransition.ready);
     });
 </script>
 <?php $hyvaCsp->registerInlineScript() ?>
